--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
-axum = { version = "0.7.5", default-features = false, features = ["http1", "http2", "json", "tokio", "tower-log", "tracing"] }
-surrealdb = { version = "1", default-features = false, features = ["kv-dynamodb", "sql2"] }
+axum = { version = "0.7.7", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "tower-log", "tracing"] }
+surrealdb = { version = "2", default-features = false, features = ["kv-dynamodb", "rustls"] }
 tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.40", default-features = false, features = ["std"] }
 
@@ -17,7 +17,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-anyhow = "1.0.86"
+anyhow = "1.0.89"
 aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = { version = "1.30.0", features = ["behavior-version-latest"] }
 aws-smithy-runtime-api = "1.6.1"
@@ -31,6 +31,7 @@ serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 surrealdb.workspace = true
 tokio.workspace = true
+tower = { version = "0.5.1", default-features = false }
 tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
 tracing.workspace = true
 
