--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ serde_json = "1.0.117"
 surrealdb.workspace = true
 tokio.workspace = true
 tower = { version = "0.5.1", default-features = false }
-tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
+tower-http = { version = "0.5.2", default-features = false, features = ["cors", "trace"] }
 tracing.workspace = true
 
 [patch.crates-io]
