Add route to fetch details of PrincipalChain

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,8 @@
       "args": [],
       "cwd": "${workspaceFolder}",
       "env": {
-        "AWS_PROFILE": "ddbtest"
+        "AWS_PROFILE": "ddbtest",
+        "COLORTERM": "truecolor",
       }
     },
     {
