--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
-axum = { version = "0.7.7", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "tower-log", "tracing"] }
+axum = { version = "0.7.7", default-features = false, features = ["http1", "http2", "json", "macros", "query", "tokio", "tower-log", "tracing"] }
 surrealdb = { version = "2", default-features = false, features = ["kv-dynamodb", "rustls"] }
 tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.40", default-features = false, features = ["std"] }
