--- a/template.yaml
+++ b/template.yaml
@@ -5,6 +5,11 @@ Parameters:
     Type: CommaDelimitedList
     Description: Regions where customer accounts may be provisioned
 
+Mappings:
+  Constants:
+    Auth:
+      RefreshTokenValidityInDays: 1
+
 Resources:
   CognitoUserPool:
     Type: AWS::Cognito::UserPool
@@ -48,18 +53,22 @@ Resources:
       AllowedOAuthFlowsUserPoolClient: true
       AllowedOAuthScopes:
         - openid
+        - profile
       CallbackURLs:
-        - https://app.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse
-        - http://localhost:5173/oauth2/idpresponse
+        - !Sub https://api.${AWS::Region}.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse
+        - http://localhost:5731/oauth2/idpresponse
       ClientName: app
-      DefaultRedirectURI: https://app.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse
+      DefaultRedirectURI: !Sub https://api.${AWS::Region}.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse
       ExplicitAuthFlows:
         - ALLOW_REFRESH_TOKEN_AUTH
         - ALLOW_USER_SRP_AUTH
       PreventUserExistenceErrors: ENABLED
       ReadAttributes:
         - custom:endpoint
-      RefreshTokenValidity: 1
+      RefreshTokenValidity: !FindInMap
+        - Constants
+        - Auth
+        - RefreshTokenValidityInDays
       SupportedIdentityProviders:
         - COGNITO
       UserPoolId: !Ref CognitoUserPool
