--- a/template.yaml
+++ b/template.yaml
@@ -591,7 +591,7 @@ Resources:
               FunctionName: archodex-backend-api
               Environment:
                 Variables:
-                  COGNITO_TOKEN_ENDPOINT: !Sub https://auth.${Domain}/oauth2/token
+                  COGNITO_AUTH_ENDPOINT: !Sub https://auth.${Domain}
                   COGNITO_CLIENT_ID: !Ref CognitoUserPoolAppClientId
                   COGNITO_REDIRECT_URI: !Sub https://api.${AWS::Region}.${Domain}/oauth2/idpresponse
                   COGNITO_REFRESH_TOKEN_VALIDITY_IN_DAYS: !Ref CognitoRefreshTokenValidityInDays
