--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,10 +24,14 @@
       "env": {
         "AWS_PROFILE": "ddbtest",
         "COLORTERM": "truecolor",
+        "COGNITO_AWS_PROFILE": "archodex-dev-AdministratorAccess",
+        "ENDPOINT": "https://api.us-west-2.chase.dev.servicearch.com",
         "COGNITO_AUTH_ENDPOINT": "https://auth.chase.dev.servicearch.com",
+        "COGNITO_USER_POOL_ID": "us-west-2_977GUSnal",
         "COGNITO_CLIENT_ID": "3r0ibjo8ibf3q2r4u1aau8m8cj",
         "COGNITO_REDIRECT_URI": "http://localhost:5731/oauth2/idpresponse",
         "COGNITO_REFRESH_TOKEN_VALIDITY_IN_DAYS": "1",
+        "COGNITO_ISSUER_ENDPOINT": "https://cognito-idp.us-west-2.amazonaws.com",
         "APP_REDIRECT_URI": "http://localhost:5173/oauth2/idpresponse",
       }
     },
